test-deployment.yaml
# kubectl create secret docker-registry ghcr-auth-secret \
#   --docker-server=ghcr.io --docker-username=wafflsett --docker-password=<TOKEN>

# ── API Deployment ────────────────────────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-books-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicd-books-api
  template:
    metadata:
      labels:
        app: cicd-books-api
    spec:
      containers:
        - name: cicd-books-api-container
          image: ghcr.io/wafflsett/cicd-books-api:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: v1
kind: Service
metadata:
  name: cicd-books-api-service
spec:
  selector:
    app: cicd-books-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

# ── Frontend Deployment ───────────────────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-books-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicd-books-frontend
  template:
    metadata:
      labels:
        app: cicd-books-frontend
    spec:
      containers:
        - name: cicd-books-frontend-container
          image: ghcr.io/wafflsett/cicd-books-frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: v1
kind: Service
metadata:
  name: cicd-books-frontend-service
spec:
  selector:
    app: cicd-books-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

# ── Ingress ───────────────────────────────────────────────────────────────────
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-books-ingress
  annotations:
    #nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.13.39/32
spec:
  ingressClassName: nginx
  rules:
    - host: tg-books.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-books-frontend-service
                port:
                  number: 80
